// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`array of a primitive type 1`] = `
"export function isX(root: unknown): root is X {
    type Element = X[number];
    function isElement(root: unknown): root is Element {
        // check that \`root\` is of primitive type \`number\`
        if (!(typeof root === "number")) {
            return false;
        }
        /*
          In TypeScript the \`never\` type is assignable to any other type,
          effectively turning it into an unsafe \`any\` type at assignment.
          The following checks ensure that none of the checked values got
          narrowed down to \`never\`.
        */ 
        // @ts-expect-error: should not be \`never\`
        (root) satisfies never;
        (root) satisfies Element;
        return true;
    }
    // check that \`root\` is an array of nested type \`Element\` (\`X\`)
    if (!(safeIsArray(root) && root.every(isElement))) {
        return false;
    }
    /*
      In TypeScript the \`never\` type is assignable to any other type,
      effectively turning it into an unsafe \`any\` type at assignment.
      The following checks ensure that none of the checked values got
      narrowed down to \`never\`.
    */ 
    // @ts-expect-error: should not be \`never\`
    (root) satisfies never;
    // @ts-expect-error: should not be \`never\`
    (isX) satisfies never;
    // @ts-expect-error: should not be \`never\`
    (isElement) satisfies never;
    (root) satisfies X;
    return true;
}
"
`;

exports[`array of a primitive type union 1`] = `
"export function isX(root: unknown): root is X {
    type Element = X[number];
    function isElement(root: unknown): root is Element {
        // check that \`root\` is in the union of 2 trivial types
        if (!((typeof root === "number") || (typeof root === "string"))) {
            return false;
        }
        /*
          In TypeScript the \`never\` type is assignable to any other type,
          effectively turning it into an unsafe \`any\` type at assignment.
          The following checks ensure that none of the checked values got
          narrowed down to \`never\`.
        */ 
        // @ts-expect-error: should not be \`never\`
        (root) satisfies never;
        (root) satisfies Element;
        return true;
    }
    // check that \`root\` is an array of nested type \`Element\` (\`X\`)
    if (!(safeIsArray(root) && root.every(isElement))) {
        return false;
    }
    /*
      In TypeScript the \`never\` type is assignable to any other type,
      effectively turning it into an unsafe \`any\` type at assignment.
      The following checks ensure that none of the checked values got
      narrowed down to \`never\`.
    */ 
    // @ts-expect-error: should not be \`never\`
    (root) satisfies never;
    // @ts-expect-error: should not be \`never\`
    (isX) satisfies never;
    // @ts-expect-error: should not be \`never\`
    (isElement) satisfies never;
    (root) satisfies X;
    return true;
}
"
`;

exports[`array of an object type 1`] = `
"export function isX(root: unknown): root is X {
    type Element = X[number];
    function isElement(root: unknown): root is Element {
        if (!(typeof root === "object" && root !== null)) {
            return false;
        }
        (root) satisfies {};
        const { a, b }: SafeShallowShape<Element> = root;
        // check that \`root.a\` is of primitive type \`number\`
        if (!(typeof a === "number")) {
            return false;
        }
        // check that \`root.b\` is of primitive type \`string\`
        if (!(typeof b === "string")) {
            return false;
        }
        /*
          In TypeScript the \`never\` type is assignable to any other type,
          effectively turning it into an unsafe \`any\` type at assignment.
          The following checks ensure that none of the checked values got
          narrowed down to \`never\`.
        */ 
        // @ts-expect-error: should not be \`never\`
        (root) satisfies never;
        // @ts-expect-error: should not be \`never\`
        (a) satisfies never;
        // @ts-expect-error: should not be \`never\`
        (b) satisfies never;
        ({
            a,
            b
        }) satisfies Element;
        return true;
    }
    // check that \`root\` is an array of nested type \`Element\` (\`X\`)
    if (!(safeIsArray(root) && root.every(isElement))) {
        return false;
    }
    /*
      In TypeScript the \`never\` type is assignable to any other type,
      effectively turning it into an unsafe \`any\` type at assignment.
      The following checks ensure that none of the checked values got
      narrowed down to \`never\`.
    */ 
    // @ts-expect-error: should not be \`never\`
    (root) satisfies never;
    // @ts-expect-error: should not be \`never\`
    (isX) satisfies never;
    // @ts-expect-error: should not be \`never\`
    (isElement) satisfies never;
    (root) satisfies X;
    return true;
}
"
`;

exports[`both object and array 1`] = `
"import { type X } from "./guards.ts";
const safeIsArray: (v: unknown) => v is unknown[] = Array.isArray;
export function isX(root: unknown): root is X {
    type Element = X[number];
    function isElement(root: unknown): root is Element {
        if (!(typeof root === "object" && root !== null)) {
            return false;
        }
        (root) satisfies {};
        /*
          In TypeScript the \`never\` type is assignable to any other type,
          effectively turning it into an unsafe \`any\` type at assignment.
          The following checks ensure that none of the checked values got
          narrowed down to \`never\`.
        */ 
        // @ts-expect-error: should not be \`never\`
        (root) satisfies never;
        ({}) satisfies Element;
        return true;
    }
    // check that \`root\` is an array of nested type \`Element\` (\`X\`)
    if (!(safeIsArray(root) && root.every(isElement))) {
        return false;
    }
    /*
      In TypeScript the \`never\` type is assignable to any other type,
      effectively turning it into an unsafe \`any\` type at assignment.
      The following checks ensure that none of the checked values got
      narrowed down to \`never\`.
    */ 
    // @ts-expect-error: should not be \`never\`
    (root) satisfies never;
    // @ts-expect-error: should not be \`never\`
    (isX) satisfies never;
    // @ts-expect-error: should not be \`never\`
    (isElement) satisfies never;
    (root) satisfies X;
    return true;
}
"
`;

exports[`empty object 1`] = `
"export function isX(root: unknown): root is X {
    if (!(typeof root === "object" && root !== null)) {
        return false;
    }
    (root) satisfies {};
    /*
      In TypeScript the \`never\` type is assignable to any other type,
      effectively turning it into an unsafe \`any\` type at assignment.
      The following checks ensure that none of the checked values got
      narrowed down to \`never\`.
    */ 
    // @ts-expect-error: should not be \`never\`
    (root) satisfies never;
    // @ts-expect-error: should not be \`never\`
    (isX) satisfies never;
    ({}) satisfies X;
    return true;
}
"
`;

exports[`multiple reference types 1`] = `
"import { type A, type B, type C, type D } from "./guards.ts";
const safeIsArray: (v: unknown) => v is unknown[] = Array.isArray;
export function isA(root: unknown): root is A {
    type Element = A[number];
    function isElement(root: unknown): root is Element {
        // check that \`root\` is of type B
        if (!(isB(root))) {
            return false;
        }
        /*
          In TypeScript the \`never\` type is assignable to any other type,
          effectively turning it into an unsafe \`any\` type at assignment.
          The following checks ensure that none of the checked values got
          narrowed down to \`never\`.
        */ 
        // @ts-expect-error: should not be \`never\`
        (root) satisfies never;
        (root) satisfies Element;
        return true;
    }
    // check that \`root\` is an array of nested type \`Element\` (\`A\`)
    if (!(safeIsArray(root) && root.every(isElement))) {
        return false;
    }
    /*
      In TypeScript the \`never\` type is assignable to any other type,
      effectively turning it into an unsafe \`any\` type at assignment.
      The following checks ensure that none of the checked values got
      narrowed down to \`never\`.
    */ 
    // @ts-expect-error: should not be \`never\`
    (root) satisfies never;
    // @ts-expect-error: should not be \`never\`
    (isA) satisfies never;
    // @ts-expect-error: should not be \`never\`
    (isElement) satisfies never;
    (root) satisfies A;
    return true;
}
export function isB(root: unknown): root is B {
    type B_Element = B[number];
    function isB_Element(root: unknown): root is B_Element {
        // check that \`root\` is of type C
        if (!(isC(root))) {
            return false;
        }
        /*
          In TypeScript the \`never\` type is assignable to any other type,
          effectively turning it into an unsafe \`any\` type at assignment.
          The following checks ensure that none of the checked values got
          narrowed down to \`never\`.
        */ 
        // @ts-expect-error: should not be \`never\`
        (root) satisfies never;
        (root) satisfies B_Element;
        return true;
    }
    // check that \`root\` is an array of nested type \`B_Element\` (\`B\`)
    if (!(safeIsArray(root) && root.every(isB_Element))) {
        return false;
    }
    /*
      In TypeScript the \`never\` type is assignable to any other type,
      effectively turning it into an unsafe \`any\` type at assignment.
      The following checks ensure that none of the checked values got
      narrowed down to \`never\`.
    */ 
    // @ts-expect-error: should not be \`never\`
    (root) satisfies never;
    // @ts-expect-error: should not be \`never\`
    (isB) satisfies never;
    // @ts-expect-error: should not be \`never\`
    (isB_Element) satisfies never;
    (root) satisfies B;
    return true;
}
export function isC(root: unknown): root is C {
    type C_Element = C[number];
    function isC_Element(root: unknown): root is C_Element {
        // check that \`root\` is of type D
        if (!(isD(root))) {
            return false;
        }
        /*
          In TypeScript the \`never\` type is assignable to any other type,
          effectively turning it into an unsafe \`any\` type at assignment.
          The following checks ensure that none of the checked values got
          narrowed down to \`never\`.
        */ 
        // @ts-expect-error: should not be \`never\`
        (root) satisfies never;
        (root) satisfies C_Element;
        return true;
    }
    // check that \`root\` is an array of nested type \`C_Element\` (\`C\`)
    if (!(safeIsArray(root) && root.every(isC_Element))) {
        return false;
    }
    /*
      In TypeScript the \`never\` type is assignable to any other type,
      effectively turning it into an unsafe \`any\` type at assignment.
      The following checks ensure that none of the checked values got
      narrowed down to \`never\`.
    */ 
    // @ts-expect-error: should not be \`never\`
    (root) satisfies never;
    // @ts-expect-error: should not be \`never\`
    (isC) satisfies never;
    // @ts-expect-error: should not be \`never\`
    (isC_Element) satisfies never;
    (root) satisfies C;
    return true;
}
export function isD(root: unknown): root is D {
    type D_Element = D[number];
    function isD_Element(root: unknown): root is D_Element {
        // check that \`root\` is of primitive type \`boolean\`
        if (!(typeof root === "boolean")) {
            return false;
        }
        /*
          In TypeScript the \`never\` type is assignable to any other type,
          effectively turning it into an unsafe \`any\` type at assignment.
          The following checks ensure that none of the checked values got
          narrowed down to \`never\`.
        */ 
        // @ts-expect-error: should not be \`never\`
        (root) satisfies never;
        (root) satisfies D_Element;
        return true;
    }
    // check that \`root\` is an array of nested type \`D_Element\` (\`D\`)
    if (!(safeIsArray(root) && root.every(isD_Element))) {
        return false;
    }
    /*
      In TypeScript the \`never\` type is assignable to any other type,
      effectively turning it into an unsafe \`any\` type at assignment.
      The following checks ensure that none of the checked values got
      narrowed down to \`never\`.
    */ 
    // @ts-expect-error: should not be \`never\`
    (root) satisfies never;
    // @ts-expect-error: should not be \`never\`
    (isD) satisfies never;
    // @ts-expect-error: should not be \`never\`
    (isD_Element) satisfies never;
    (root) satisfies D;
    return true;
}
"
`;

exports[`nested arrays of a primitive type 1`] = `
"export function isX(root: unknown): root is X {
    type Element = X[number];
    function isElement(root: unknown): root is Element {
        type Element_Element = Element[number];
        function isElement_Element(root: unknown): root is Element_Element {
            type Element_Element_Element = Element_Element[number];
            function isElement_Element_Element(root: unknown): root is Element_Element_Element {
                // check that \`root\` is of primitive type \`number\`
                if (!(typeof root === "number")) {
                    return false;
                }
                /*
                  In TypeScript the \`never\` type is assignable to any other type,
                  effectively turning it into an unsafe \`any\` type at assignment.
                  The following checks ensure that none of the checked values got
                  narrowed down to \`never\`.
                */ 
                // @ts-expect-error: should not be \`never\`
                (root) satisfies never;
                (root) satisfies Element_Element_Element;
                return true;
            }
            // check that \`root\` is an array of nested type \`Element_Element_Element\` (\`Element_Element\`)
            if (!(safeIsArray(root) && root.every(isElement_Element_Element))) {
                return false;
            }
            /*
              In TypeScript the \`never\` type is assignable to any other type,
              effectively turning it into an unsafe \`any\` type at assignment.
              The following checks ensure that none of the checked values got
              narrowed down to \`never\`.
            */ 
            // @ts-expect-error: should not be \`never\`
            (root) satisfies never;
            // @ts-expect-error: should not be \`never\`
            (isElement_Element_Element) satisfies never;
            (root) satisfies Element_Element;
            return true;
        }
        // check that \`root\` is an array of nested type \`Element_Element\` (\`Element\`)
        if (!(safeIsArray(root) && root.every(isElement_Element))) {
            return false;
        }
        /*
          In TypeScript the \`never\` type is assignable to any other type,
          effectively turning it into an unsafe \`any\` type at assignment.
          The following checks ensure that none of the checked values got
          narrowed down to \`never\`.
        */ 
        // @ts-expect-error: should not be \`never\`
        (root) satisfies never;
        // @ts-expect-error: should not be \`never\`
        (isElement_Element) satisfies never;
        (root) satisfies Element;
        return true;
    }
    // check that \`root\` is an array of nested type \`Element\` (\`X\`)
    if (!(safeIsArray(root) && root.every(isElement))) {
        return false;
    }
    /*
      In TypeScript the \`never\` type is assignable to any other type,
      effectively turning it into an unsafe \`any\` type at assignment.
      The following checks ensure that none of the checked values got
      narrowed down to \`never\`.
    */ 
    // @ts-expect-error: should not be \`never\`
    (root) satisfies never;
    // @ts-expect-error: should not be \`never\`
    (isX) satisfies never;
    // @ts-expect-error: should not be \`never\`
    (isElement) satisfies never;
    (root) satisfies X;
    return true;
}
"
`;

exports[`nested object 1`] = `
"export function isX(root: unknown): root is X {
    if (!(typeof root === "object" && root !== null)) {
        return false;
    }
    (root) satisfies {};
    const { a }: SafeShallowShape<X> = root;
    if (!(typeof a === "object" && a !== null)) {
        return false;
    }
    (a) satisfies {};
    const { b }: SafeShallowShape<X["a"]> = a;
    if (!(typeof b === "object" && b !== null)) {
        return false;
    }
    (b) satisfies {};
    const { c }: SafeShallowShape<X["a"]["b"]> = b;
    // check that \`root.a.b.c\` is of primitive type \`string\`
    if (!(typeof c === "string")) {
        return false;
    }
    /*
      In TypeScript the \`never\` type is assignable to any other type,
      effectively turning it into an unsafe \`any\` type at assignment.
      The following checks ensure that none of the checked values got
      narrowed down to \`never\`.
    */ 
    // @ts-expect-error: should not be \`never\`
    (root) satisfies never;
    // @ts-expect-error: should not be \`never\`
    (isX) satisfies never;
    // @ts-expect-error: should not be \`never\`
    (a) satisfies never;
    // @ts-expect-error: should not be \`never\`
    (b) satisfies never;
    // @ts-expect-error: should not be \`never\`
    (c) satisfies never;
    ({
        a: {
            b: {
                c
            }
        }
    }) satisfies X;
    return true;
}
"
`;

exports[`no models 1`] = `
"import {} from "./guards.ts";
"
`;

exports[`null 1`] = `
"export function isX(root: unknown): root is X {
    // check that \`root\` is of literal type null
    if (!(root === null)) {
        return false;
    }
    /*
      In TypeScript the \`never\` type is assignable to any other type,
      effectively turning it into an unsafe \`any\` type at assignment.
      The following checks ensure that none of the checked values got
      narrowed down to \`never\`.
    */ 
    // @ts-expect-error: should not be \`never\`
    (root) satisfies never;
    // @ts-expect-error: should not be \`never\`
    (isX) satisfies never;
    (root) satisfies X;
    return true;
}
"
`;

exports[`object attributes should not collide on root 1`] = `
"export function isX(root: unknown): root is X {
    if (!(typeof root === "object" && root !== null)) {
        return false;
    }
    (root) satisfies {};
    const { "€": _, "£": root__, "∂": __2 }: SafeShallowShape<X> = root;
    // check that \`root["€"]\` is of literal type 1
    if (!(_ === 1)) {
        return false;
    }
    // check that \`root["£"]\` is of literal type 2
    if (!(root__ === 2)) {
        return false;
    }
    // check that \`root["∂"]\` is of literal type 3
    if (!(__2 === 3)) {
        return false;
    }
    /*
      In TypeScript the \`never\` type is assignable to any other type,
      effectively turning it into an unsafe \`any\` type at assignment.
      The following checks ensure that none of the checked values got
      narrowed down to \`never\`.
    */ 
    // @ts-expect-error: should not be \`never\`
    (root) satisfies never;
    // @ts-expect-error: should not be \`never\`
    (isX) satisfies never;
    // @ts-expect-error: should not be \`never\`
    (_) satisfies never;
    // @ts-expect-error: should not be \`never\`
    (root__) satisfies never;
    // @ts-expect-error: should not be \`never\`
    (__2) satisfies never;
    ({
        "€": _,
        "£": root__,
        "∂": __2
    }) satisfies X;
    return true;
}
"
`;

exports[`object nested attributes should not collide on root 1`] = `
"export function isX(root: unknown): root is X {
    if (!(typeof root === "object" && root !== null)) {
        return false;
    }
    (root) satisfies {};
    const { "€": _, a }: SafeShallowShape<X> = root;
    // check that \`root["€"]\` is of literal type 1
    if (!(_ === 1)) {
        return false;
    }
    if (!(typeof a === "object" && a !== null)) {
        return false;
    }
    (a) satisfies {};
    const { "€": a__, b }: SafeShallowShape<X["a"]> = a;
    // check that \`root.a["€"]\` is of literal type 2
    if (!(a__ === 2)) {
        return false;
    }
    if (!(typeof b === "object" && b !== null)) {
        return false;
    }
    (b) satisfies {};
    const { "€": b__, "£": a_b__, "∂": root_a_b__ }: SafeShallowShape<X["a"]["b"]> = b;
    // check that \`root.a.b["€"]\` is of literal type 3
    if (!(b__ === 3)) {
        return false;
    }
    // check that \`root.a.b["£"]\` is of literal type 4
    if (!(a_b__ === 4)) {
        return false;
    }
    // check that \`root.a.b["∂"]\` is of literal type 5
    if (!(root_a_b__ === 5)) {
        return false;
    }
    /*
      In TypeScript the \`never\` type is assignable to any other type,
      effectively turning it into an unsafe \`any\` type at assignment.
      The following checks ensure that none of the checked values got
      narrowed down to \`never\`.
    */ 
    // @ts-expect-error: should not be \`never\`
    (root) satisfies never;
    // @ts-expect-error: should not be \`never\`
    (isX) satisfies never;
    // @ts-expect-error: should not be \`never\`
    (_) satisfies never;
    // @ts-expect-error: should not be \`never\`
    (a) satisfies never;
    // @ts-expect-error: should not be \`never\`
    (a__) satisfies never;
    // @ts-expect-error: should not be \`never\`
    (b) satisfies never;
    // @ts-expect-error: should not be \`never\`
    (b__) satisfies never;
    // @ts-expect-error: should not be \`never\`
    (a_b__) satisfies never;
    // @ts-expect-error: should not be \`never\`
    (root_a_b__) satisfies never;
    ({
        "€": _,
        a: {
            "€": a__,
            b: {
                "€": b__,
                "£": a_b__,
                "∂": root_a_b__
            }
        }
    }) satisfies X;
    return true;
}
"
`;

exports[`object with non-identificator-like names 1`] = `
"export function isX(root: unknown): root is X {
    if (!(typeof root === "object" && root !== null)) {
        return false;
    }
    (root) satisfies {};
    const { "with two spaces": with_two_spaces }: SafeShallowShape<X> = root;
    // check that \`root["with two spaces"]\` is of literal type 1
    if (!(with_two_spaces === 1)) {
        return false;
    }
    /*
      In TypeScript the \`never\` type is assignable to any other type,
      effectively turning it into an unsafe \`any\` type at assignment.
      The following checks ensure that none of the checked values got
      narrowed down to \`never\`.
    */ 
    // @ts-expect-error: should not be \`never\`
    (root) satisfies never;
    // @ts-expect-error: should not be \`never\`
    (isX) satisfies never;
    // @ts-expect-error: should not be \`never\`
    (with_two_spaces) satisfies never;
    ({
        "with two spaces": with_two_spaces
    }) satisfies X;
    return true;
}
"
`;

exports[`object with non-identificator-like names 2`] = `
"export function isX(root: unknown): root is X {
    if (!(typeof root === "object" && root !== null)) {
        return false;
    }
    (root) satisfies {};
    const { "1starts_with_a_number": _1starts_with_a_number }: SafeShallowShape<X> = root;
    // check that \`root["1starts_with_a_number"]\` is of literal type 1
    if (!(_1starts_with_a_number === 1)) {
        return false;
    }
    /*
      In TypeScript the \`never\` type is assignable to any other type,
      effectively turning it into an unsafe \`any\` type at assignment.
      The following checks ensure that none of the checked values got
      narrowed down to \`never\`.
    */ 
    // @ts-expect-error: should not be \`never\`
    (root) satisfies never;
    // @ts-expect-error: should not be \`never\`
    (isX) satisfies never;
    // @ts-expect-error: should not be \`never\`
    (_1starts_with_a_number) satisfies never;
    ({
        "1starts_with_a_number": _1starts_with_a_number
    }) satisfies X;
    return true;
}
"
`;

exports[`object with non-identificator-like names 3`] = `
"export function isX(root: unknown): root is X {
    if (!(typeof root === "object" && root !== null)) {
        return false;
    }
    (root) satisfies {};
    const { "∞_starts_with_a_unicode": __starts_with_a_unicode }: SafeShallowShape<X> = root;
    // check that \`root["∞_starts_with_a_unicode"]\` is of literal type 1
    if (!(__starts_with_a_unicode === 1)) {
        return false;
    }
    /*
      In TypeScript the \`never\` type is assignable to any other type,
      effectively turning it into an unsafe \`any\` type at assignment.
      The following checks ensure that none of the checked values got
      narrowed down to \`never\`.
    */ 
    // @ts-expect-error: should not be \`never\`
    (root) satisfies never;
    // @ts-expect-error: should not be \`never\`
    (isX) satisfies never;
    // @ts-expect-error: should not be \`never\`
    (__starts_with_a_unicode) satisfies never;
    ({
        "∞_starts_with_a_unicode": __starts_with_a_unicode
    }) satisfies X;
    return true;
}
"
`;

exports[`object with primitive types 1`] = `
"export function isX(root: unknown): root is X {
    if (!(typeof root === "object" && root !== null)) {
        return false;
    }
    (root) satisfies {};
    const { a, b, c }: SafeShallowShape<X> = root;
    // check that \`root.a\` is of primitive type \`number\`
    if (!(typeof a === "number")) {
        return false;
    }
    // check that \`root.b\` is of primitive type \`string\`
    if (!(typeof b === "string")) {
        return false;
    }
    // check that \`root.c\` is of primitive type \`boolean\`
    if (!(typeof c === "boolean")) {
        return false;
    }
    /*
      In TypeScript the \`never\` type is assignable to any other type,
      effectively turning it into an unsafe \`any\` type at assignment.
      The following checks ensure that none of the checked values got
      narrowed down to \`never\`.
    */ 
    // @ts-expect-error: should not be \`never\`
    (root) satisfies never;
    // @ts-expect-error: should not be \`never\`
    (isX) satisfies never;
    // @ts-expect-error: should not be \`never\`
    (a) satisfies never;
    // @ts-expect-error: should not be \`never\`
    (b) satisfies never;
    // @ts-expect-error: should not be \`never\`
    (c) satisfies never;
    ({
        a,
        b,
        c
    }) satisfies X;
    return true;
}
"
`;

exports[`only array 1`] = `
"import { type X } from "./guards.ts";
const safeIsArray: (v: unknown) => v is unknown[] = Array.isArray;
export function isX(root: unknown): root is X {
    type Element = X[number];
    function isElement(root: unknown): root is Element {
        // check that \`root\` is of primitive type \`string\`
        if (!(typeof root === "string")) {
            return false;
        }
        /*
          In TypeScript the \`never\` type is assignable to any other type,
          effectively turning it into an unsafe \`any\` type at assignment.
          The following checks ensure that none of the checked values got
          narrowed down to \`never\`.
        */ 
        // @ts-expect-error: should not be \`never\`
        (root) satisfies never;
        (root) satisfies Element;
        return true;
    }
    // check that \`root\` is an array of nested type \`Element\` (\`X\`)
    if (!(safeIsArray(root) && root.every(isElement))) {
        return false;
    }
    /*
      In TypeScript the \`never\` type is assignable to any other type,
      effectively turning it into an unsafe \`any\` type at assignment.
      The following checks ensure that none of the checked values got
      narrowed down to \`never\`.
    */ 
    // @ts-expect-error: should not be \`never\`
    (root) satisfies never;
    // @ts-expect-error: should not be \`never\`
    (isX) satisfies never;
    // @ts-expect-error: should not be \`never\`
    (isElement) satisfies never;
    (root) satisfies X;
    return true;
}
"
`;

exports[`only object 1`] = `
"import { type X } from "./guards.ts";
export function isX(root: unknown): root is X {
    if (!(typeof root === "object" && root !== null)) {
        return false;
    }
    (root) satisfies {};
    /*
      In TypeScript the \`never\` type is assignable to any other type,
      effectively turning it into an unsafe \`any\` type at assignment.
      The following checks ensure that none of the checked values got
      narrowed down to \`never\`.
    */ 
    // @ts-expect-error: should not be \`never\`
    (root) satisfies never;
    // @ts-expect-error: should not be \`never\`
    (isX) satisfies never;
    ({}) satisfies X;
    return true;
}
"
`;

exports[`reference type in a union 1`] = `
"export function isX(root: unknown): root is X {
    // check that \`root\` is in the union of 2 trivial types
    if (!((typeof root === "number") || (isA(root)))) {
        return false;
    }
    /*
      In TypeScript the \`never\` type is assignable to any other type,
      effectively turning it into an unsafe \`any\` type at assignment.
      The following checks ensure that none of the checked values got
      narrowed down to \`never\`.
    */ 
    // @ts-expect-error: should not be \`never\`
    (root) satisfies never;
    // @ts-expect-error: should not be \`never\`
    (isX) satisfies never;
    (root) satisfies X;
    return true;
}
"
`;

exports[`reference type in an object 1`] = `
"export function isX(root: unknown): root is X {
    if (!(typeof root === "object" && root !== null)) {
        return false;
    }
    (root) satisfies {};
    const { a, b }: SafeShallowShape<X> = root;
    // check that \`root.a\` is of type A
    if (!(isA(a))) {
        return false;
    }
    // check that \`root.b\` is of type B
    if (!(isB(b))) {
        return false;
    }
    /*
      In TypeScript the \`never\` type is assignable to any other type,
      effectively turning it into an unsafe \`any\` type at assignment.
      The following checks ensure that none of the checked values got
      narrowed down to \`never\`.
    */ 
    // @ts-expect-error: should not be \`never\`
    (root) satisfies never;
    // @ts-expect-error: should not be \`never\`
    (isX) satisfies never;
    // @ts-expect-error: should not be \`never\`
    (a) satisfies never;
    // @ts-expect-error: should not be \`never\`
    (b) satisfies never;
    ({
        a,
        b
    }) satisfies X;
    return true;
}
"
`;

exports[`regression: don't require top level predicates for nested predicate types  1`] = `
"import { type X } from "./guards.ts";
type SafeShallowShape<Type extends {}> = {
    [_ in keyof Type]?: unknown;
};
const safeIsArray: (v: unknown) => v is unknown[] = Array.isArray;
export function isX(root: unknown): root is X {
    type Element = X["a"][number];
    function isElement(root: unknown): root is Element {
        // check that \`root\` is of literal type "foo"
        if (!(root === "foo")) {
            return false;
        }
        /*
          In TypeScript the \`never\` type is assignable to any other type,
          effectively turning it into an unsafe \`any\` type at assignment.
          The following checks ensure that none of the checked values got
          narrowed down to \`never\`.
        */ 
        // @ts-expect-error: should not be \`never\`
        (root) satisfies never;
        (root) satisfies Element;
        return true;
    }
    if (!(typeof root === "object" && root !== null)) {
        return false;
    }
    (root) satisfies {};
    const { a }: SafeShallowShape<X> = root;
    // check that \`root.a\` is an array of nested type \`Element\` (\`X["a"]\`)
    if (!(safeIsArray(a) && a.every(isElement))) {
        return false;
    }
    /*
      In TypeScript the \`never\` type is assignable to any other type,
      effectively turning it into an unsafe \`any\` type at assignment.
      The following checks ensure that none of the checked values got
      narrowed down to \`never\`.
    */ 
    // @ts-expect-error: should not be \`never\`
    (root) satisfies never;
    // @ts-expect-error: should not be \`never\`
    (isX) satisfies never;
    // @ts-expect-error: should not be \`never\`
    (a) satisfies never;
    // @ts-expect-error: should not be \`never\`
    (isElement) satisfies never;
    ({
        a
    }) satisfies X;
    return true;
}
"
`;

exports[`regression: don't require top level predicates for nested predicate types  2`] = `
"import { type X } from "./guards.ts";
type SafeShallowShape<Type extends {}> = {
    [_ in keyof Type]?: unknown;
};
export function isX(root: unknown): root is X {
    type ObjectInA = Extract<X["a"], object>;
    function isObjectInA(root: unknown): root is ObjectInA {
        if (!(typeof root === "object" && root !== null)) {
            return false;
        }
        (root) satisfies {};
        const { b }: SafeShallowShape<ObjectInA> = root;
        // check that \`root.b\` is of literal type "B"
        if (!(b === "B")) {
            return false;
        }
        /*
          In TypeScript the \`never\` type is assignable to any other type,
          effectively turning it into an unsafe \`any\` type at assignment.
          The following checks ensure that none of the checked values got
          narrowed down to \`never\`.
        */ 
        // @ts-expect-error: should not be \`never\`
        (root) satisfies never;
        // @ts-expect-error: should not be \`never\`
        (b) satisfies never;
        ({
            b
        }) satisfies ObjectInA;
        return true;
    }
    if (!(typeof root === "object" && root !== null)) {
        return false;
    }
    (root) satisfies {};
    const { a }: SafeShallowShape<X> = root;
    // check that \`root.a\` is of nested type ObjectInA
    if (!((a === "undefined") || (isObjectInA(a)))) {
        return false;
    }
    /*
      In TypeScript the \`never\` type is assignable to any other type,
      effectively turning it into an unsafe \`any\` type at assignment.
      The following checks ensure that none of the checked values got
      narrowed down to \`never\`.
    */ 
    // @ts-expect-error: should not be \`never\`
    (root) satisfies never;
    // @ts-expect-error: should not be \`never\`
    (isX) satisfies never;
    // @ts-expect-error: should not be \`never\`
    (a) satisfies never;
    // @ts-expect-error: should not be \`never\`
    (isObjectInA) satisfies never;
    ({
        a
    }) satisfies X;
    return true;
}
"
`;

exports[`regression: empty object does not use SafeShallowShape 1`] = `
"import { type X } from "./guards.ts";
export function isX(root: unknown): root is X {
    if (!(typeof root === "object" && root !== null)) {
        return false;
    }
    (root) satisfies {};
    /*
      In TypeScript the \`never\` type is assignable to any other type,
      effectively turning it into an unsafe \`any\` type at assignment.
      The following checks ensure that none of the checked values got
      narrowed down to \`never\`.
    */ 
    // @ts-expect-error: should not be \`never\`
    (root) satisfies never;
    // @ts-expect-error: should not be \`never\`
    (isX) satisfies never;
    ({}) satisfies X;
    return true;
}
"
`;

exports[`two arrays of a primitive type 1`] = `
"export function isX(root: unknown): root is X {
    type Element = X["a"][number];
    function isElement(root: unknown): root is Element {
        // check that \`root\` is of primitive type \`number\`
        if (!(typeof root === "number")) {
            return false;
        }
        /*
          In TypeScript the \`never\` type is assignable to any other type,
          effectively turning it into an unsafe \`any\` type at assignment.
          The following checks ensure that none of the checked values got
          narrowed down to \`never\`.
        */ 
        // @ts-expect-error: should not be \`never\`
        (root) satisfies never;
        (root) satisfies Element;
        return true;
    }
    type B_Element = X["b"][number];
    function isB_Element(root: unknown): root is B_Element {
        // check that \`root\` is of primitive type \`string\`
        if (!(typeof root === "string")) {
            return false;
        }
        /*
          In TypeScript the \`never\` type is assignable to any other type,
          effectively turning it into an unsafe \`any\` type at assignment.
          The following checks ensure that none of the checked values got
          narrowed down to \`never\`.
        */ 
        // @ts-expect-error: should not be \`never\`
        (root) satisfies never;
        (root) satisfies B_Element;
        return true;
    }
    if (!(typeof root === "object" && root !== null)) {
        return false;
    }
    (root) satisfies {};
    const { a, b }: SafeShallowShape<X> = root;
    // check that \`root.a\` is an array of nested type \`Element\` (\`X["a"]\`)
    if (!(safeIsArray(a) && a.every(isElement))) {
        return false;
    }
    // check that \`root.b\` is an array of nested type \`B_Element\` (\`X["b"]\`)
    if (!(safeIsArray(b) && b.every(isB_Element))) {
        return false;
    }
    /*
      In TypeScript the \`never\` type is assignable to any other type,
      effectively turning it into an unsafe \`any\` type at assignment.
      The following checks ensure that none of the checked values got
      narrowed down to \`never\`.
    */ 
    // @ts-expect-error: should not be \`never\`
    (root) satisfies never;
    // @ts-expect-error: should not be \`never\`
    (isX) satisfies never;
    // @ts-expect-error: should not be \`never\`
    (a) satisfies never;
    // @ts-expect-error: should not be \`never\`
    (b) satisfies never;
    // @ts-expect-error: should not be \`never\`
    (isElement) satisfies never;
    // @ts-expect-error: should not be \`never\`
    (isB_Element) satisfies never;
    ({
        a,
        b
    }) satisfies X;
    return true;
}
"
`;

exports[`undefined 1`] = `
"export function isX(root: unknown): root is X {
    // check that \`root\` is of literal type undefined
    if (!(typeof root === "undefined")) {
        return false;
    }
    /*
      In TypeScript the \`never\` type is assignable to any other type,
      effectively turning it into an unsafe \`any\` type at assignment.
      The following checks ensure that none of the checked values got
      narrowed down to \`never\`.
    */ 
    // @ts-expect-error: should not be \`never\`
    (root) satisfies never;
    // @ts-expect-error: should not be \`never\`
    (isX) satisfies never;
    (root) satisfies X;
    return true;
}
"
`;

exports[`union of literal types 1`] = `
"export function isX(root: unknown): root is X {
    // check that \`root\` is in the union of 8 trivial types
    if (!((root === "a") || (root === "b") || (root === 1) || (root === 2) || (root === true) || (root === false) || (root === null) || (typeof root === "undefined"))) {
        return false;
    }
    /*
      In TypeScript the \`never\` type is assignable to any other type,
      effectively turning it into an unsafe \`any\` type at assignment.
      The following checks ensure that none of the checked values got
      narrowed down to \`never\`.
    */ 
    // @ts-expect-error: should not be \`never\`
    (root) satisfies never;
    // @ts-expect-error: should not be \`never\`
    (isX) satisfies never;
    (root) satisfies X;
    return true;
}
"
`;

exports[`union of mixed safe types 1`] = `
"export function isX(root: unknown): root is X {
    // check that \`root\` is in the union of 3 trivial types
    if (!((typeof root === "number") || (root === "a") || (root === true))) {
        return false;
    }
    /*
      In TypeScript the \`never\` type is assignable to any other type,
      effectively turning it into an unsafe \`any\` type at assignment.
      The following checks ensure that none of the checked values got
      narrowed down to \`never\`.
    */ 
    // @ts-expect-error: should not be \`never\`
    (root) satisfies never;
    // @ts-expect-error: should not be \`never\`
    (isX) satisfies never;
    (root) satisfies X;
    return true;
}
"
`;

exports[`union of object and safe union types 1`] = `
"export function isUnion(root: unknown): root is Union {
    type ObjectInUnion = Extract<Union, object>;
    function isObjectInUnion(root: unknown): root is ObjectInUnion {
        if (!(typeof root === "object" && root !== null)) {
            return false;
        }
        (root) satisfies {};
        const { a }: SafeShallowShape<ObjectInUnion> = root;
        // check that \`root.a\` is of primitive type \`number\`
        if (!(typeof a === "number")) {
            return false;
        }
        /*
          In TypeScript the \`never\` type is assignable to any other type,
          effectively turning it into an unsafe \`any\` type at assignment.
          The following checks ensure that none of the checked values got
          narrowed down to \`never\`.
        */ 
        // @ts-expect-error: should not be \`never\`
        (root) satisfies never;
        // @ts-expect-error: should not be \`never\`
        (a) satisfies never;
        ({
            a
        }) satisfies ObjectInUnion;
        return true;
    }
    // check that \`root\` is of nested type ObjectInUnion
    if (!((root === 1) || (typeof root === "string") || (isObjectInUnion(root)))) {
        return false;
    }
    /*
      In TypeScript the \`never\` type is assignable to any other type,
      effectively turning it into an unsafe \`any\` type at assignment.
      The following checks ensure that none of the checked values got
      narrowed down to \`never\`.
    */ 
    // @ts-expect-error: should not be \`never\`
    (root) satisfies never;
    // @ts-expect-error: should not be \`never\`
    (isUnion) satisfies never;
    // @ts-expect-error: should not be \`never\`
    (isObjectInUnion) satisfies never;
    (root) satisfies Union;
    return true;
}
"
`;

exports[`union of primitive and literal types 1`] = `
"export function isUnion(root: unknown): root is Union {
    // check that \`root\` is in the union of 3 trivial types
    if (!((typeof root === "string") || (typeof root === "number") || (root === null))) {
        return false;
    }
    /*
      In TypeScript the \`never\` type is assignable to any other type,
      effectively turning it into an unsafe \`any\` type at assignment.
      The following checks ensure that none of the checked values got
      narrowed down to \`never\`.
    */ 
    // @ts-expect-error: should not be \`never\`
    (root) satisfies never;
    // @ts-expect-error: should not be \`never\`
    (isUnion) satisfies never;
    (root) satisfies Union;
    return true;
}
"
`;
